fix licensing,  Super Server Port = 1972

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.6'
+version: '3.8'
 services:
   iris:
     build: 
@@ -6,9 +6,9 @@ services:
       dockerfile: Dockerfile
     restart: always
     ports: 
-      - 51773
+      - 1971
       - 52773
       - 53773
     volumes:
-      - ~/iris.key:/usr/irissys/mgr/iris.key
+    #  - ~/iris.key:/usr/irissys/mgr/iris.key
       - ./:/irisdev/app
